css styling of form

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,6 +1,14 @@
-<h2>Enter both players names</h2>
-<form action="/named-cat" method="post">
-  <input type="text" name="Player One">
-  <input type="text" name="Player Two">
-  <input type="submit" value="Submit">
-</form>
+<div style="display: flex; justify-content: center; align-items: center;">
+  <form action="/named-cat" method="post">
+    <h2>Enter Player Names</h2>
+    <div style="margin-bottom: 1.2em;">
+      <strong>Player One</strong> <br>
+      <input type="text" name="Player One"><br>
+    </div>
+    <div style="margin-bottom: 1.2em;">
+      <strong>Player Two</strong> <br>
+      <input type="text" name="Player Two"><br>
+    </div>
+    <input type="submit" value="Submit">
+  </form>
+</div>
