--- a/views/index.erb
+++ b/views/index.erb
@@ -1,14 +1,14 @@
-<div style="display: flex; justify-content: center; align-items: center;">
-  <form action="/named-cat" method="post">
+<div style="display: flex; justify-content: center; align-items: center; font-family: Arial;">
+  <form action="/names" method="post">
     <h2>Enter Player Names</h2>
     <div style="margin-bottom: 1.2em;">
       <strong>Player One</strong> <br>
-      <input type="text" name="Player One"><br>
+      <input type="text" name="player_one"><br>
     </div>
     <div style="margin-bottom: 1.2em;">
       <strong>Player Two</strong> <br>
-      <input type="text" name="Player Two"><br>
+      <input type="text" name="player_two"><br>
     </div>
-    <input type="submit" value="Submit">
+    <input style="font-size: 1em;" type="submit" value="Submit">
   </form>
 </div>
