--- a/views/play.erb
+++ b/views/play.erb
@@ -1,8 +1,5 @@
 <div style="display: flex; justify-content: center; align-items: center;">
-  <div style="font-family: Arial; background: #e1e1e1; padding: 1em 4em 1em 4em; margin-top: 3em; border-radius: 20px;">
-    <h3>Player One:</h3>
-    <p><%= @player_one %></p>
-    <h3>Player Two:</h3>
-    <p><%= @player_two %></p>
+  <div style="font-family: Arial; background: #00b7ff; padding: 1em 4em 1em 4em; margin-top: 3em; border-radius: 20px;">
+    <h1><%= @player_one %> <span style="font-size: 0.4em; padding: 0 3em 0 3em;">Vrs</span> <%= @player_two %></h1>
   </div>
 </div>
