Refactored code for feature test for hit attack player confirmation

--- a/views/play.erb
+++ b/views/play.erb
@@ -3,4 +3,9 @@
     <h1><%= @player_one %> <span style="font-size: 0.4em; padding: 0 3em 0 3em;">Vrs</span> <%= @player_two %></h1>
     <p class="hit">60</p>
   </div>
+  <div style="margin-top: 2em;">
+    <form action="/attack">
+    <input type="button" value="Attack">
+  </form>
+  </div>
 </div>
