--- a/views/play.erb
+++ b/views/play.erb
@@ -1,11 +1,11 @@
-<div style="display: flex; justify-content: center; align-items: center;">
+<div style="display: flex; justify-content: center; align-items: center; flex-direction: column;">
   <div style="font-family: Arial; background: #00b7ff; padding: 1em 4em 1em 4em; margin-top: 3em; border-radius: 20px;">
-    <h1><%= @player_one %> <span style="font-size: 0.4em; padding: 0 3em 0 3em;">Vrs</span> <%= @player_two %></h1>
+    <h1><%= @player_one %><span style="font-size: 0.4em; padding: 0 3em 0 3em;">Vrs</span><%= @player_two %></h1>
     <p class="hit">60</p>
   </div>
   <div style="margin-top: 2em;">
     <form action="/attack">
-    <input type="button" value="Attack">
+    <input type="submit" value="Attack">
   </form>
   </div>
 </div>
