implement logic to attack to reduce Player 2s HP

--- a/views/attack.erb
+++ b/views/attack.erb
@@ -1,6 +1,6 @@
 <div style="display: flex; justify-content: center; align-items: center; flex-direction: column;">
   <div style="text-align: center; font-family: Arial; background: #e1e1e1; padding: 1em 4em 1em 4em; margin-top: 3em; border-radius: 20px;">
-    <h2 class="hit-confirm"><%= @player_one %> <span style="color: red; margin: 0 2em 0 2em;">Attacked</span> <%= @player_two %></h2>
+    <h2 class="hit-confirm"><%= @player_one_name %> <span style="color: red; margin: 0 2em 0 2em;">Attacked</span> <%= @player_two_name %></h2>
     <iframe src="https://giphy.com/embed/3o8doYRSVzXu3l000g" width="480" height="270" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/attack-donald-trump-eagle-3o8doYRSVzXu3l000g"></a></p>
   <div>
 <div>
