--- a/views/index.erb
+++ b/views/index.erb
@@ -3,11 +3,11 @@
     <h2>Enter Player Names</h2>
     <div style="margin-bottom: 1.2em;">
       <strong>Player One</strong> <br>
-      <input type="text" name="player_one"><br>
+      <input type="text" name="player_one_name"><br>
     </div>
     <div style="margin-bottom: 1.2em;">
       <strong>Player Two</strong> <br>
-      <input type="text" name="player_two"><br>
+      <input type="text" name="player_two_name"><br>
     </div>
     <input style="font-size: 1em;" type="submit" value="Submit">
   </form>
