--- a/views/play.erb
+++ b/views/play.erb
@@ -1,9 +1,9 @@
 <div style="display: flex; justify-content: center; align-items: center; flex-direction: column;">
   <div style="font-family: Arial; background: #E1E1E1; padding: 1em 4em 1em 4em; margin-top: 3em; border-radius: 20px;">
-    <h1><%= @player_one_name %><span style="font-size: 0.4em; padding: 0 3em 0 3em;">Vrs</span><%= @player_two_name %></h1>
+    <h1><%= @game.player_1.name %><span style="font-size: 0.4em; padding: 0 3em 0 3em;">Vrs</span><%= @game.player_2.name %></h1>
     <div style="display: inline-flex; width: 100%;">
-      <p style="justify-content: flex-start" class="hit-one"><%= @player_one_hp %></p>
-      <p style="margin-left: auto; order: 2;" class="hit-two"><%= @player_two_hp %></p>
+      <p style="justify-content: flex-start" class="hit-one"><%= @game.player_1.hp %></p>
+      <p style="margin-left: auto; order: 2;" class="hit-two"><%= @game.player_2.hp %></p>
     </div>
   </div>
   <div style="margin-top: 2em;">
