players can switch turns

--- a/views/play.erb
+++ b/views/play.erb
@@ -4,6 +4,7 @@
     <div style="display: inline-flex; width: 100%;">
       <p style="justify-content: flex-start" class="hit-one"><%= @game.player_1.hp %></p>
       <p style="margin-left: auto; order: 2;" class="hit-two"><%= @game.player_2.hp %></p>
+      <p><%= @game.current_player.name %>'s turn</p>
     </div>
   </div>
   <div style="margin-top: 2em;">
